tests/match-11/out.txt
error: non-exhaustive match
  ┌─ err.sml:4:8
  │
4 │   case (A, C, A) of
  │        ^^^^^^^^^

typechecking failed
